charts/namespace.yaml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.namespace
  #@ if data.values.istio.enabled:
  labels:
    istio-injection: enabled
  #@ end
